installed mongodb and mongoose

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/codecapstone/codealoud/issues"
   },
-  "homepage": "https://github.com/codecapstone/codealoud#readme"
+  "homepage": "https://github.com/codecapstone/codealoud#readme",
+  "dependencies": {
+    "mongodb": "^3.2.3",
+    "mongoose": "^5.5.5"
+  }
 }
