--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "bugs": {
-   "url": "https://github.com/codecapstone/codealoud/issues"
+    "url": "https://github.com/codecapstone/codealoud/issues"
   },
   "homepage": "https://github.com/codecapstone/codealoud#readme",
   "dependencies": {
@@ -60,7 +60,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.3.1",
-    "socket.io": "^2.2.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -90,6 +90,8 @@
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "mocha": "^6.1.2",
+    "mongodb": "^3.2.3",
+    "mongoose": "^5.5.5",
     "nodemon": "^1.18.3",
     "npm-merge-driver": "^2.3.5",
     "prettier": "1.11.1",
@@ -98,8 +100,6 @@
     "redux-mock-store": "^1.5.3",
     "supertest": "^4.0.2",
     "webpack": "^4.16.4",
-    "webpack-cli": "^3.1.0",
-    "mongodb": "^3.2.3",
-    "mongoose": "^5.5.5"
+    "webpack-cli": "^3.1.0"
   }
 }
