--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": "https://github.com/codecapstone/codealoud#readme",
   "dependencies": {
+    "annyang": "^2.6.1",
     "axios": "^0.18.0",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
@@ -90,7 +91,7 @@
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "mocha": "^6.1.2",
+    "mocha": "^6.1.4",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.5",
     "nodemon": "^1.18.3",
