--- a/package.json
+++ b/package.json
@@ -40,13 +40,17 @@
   },
   "homepage": "https://github.com/codecapstone/codealoud#readme",
   "dependencies": {
+    "actions-on-google": "^2.6.0",
     "annyang": "^2.6.1",
     "axios": "^0.18.0",
     "codesandbox": "^2.1.4",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
+    "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.1",
+    "firebase-admin": "^7.3.0",
+    "firebase-functions": "^2.3.0",
     "heroku": "^7.24.1",
     "history": "^4.9.0",
     "morgan": "^1.9.1",
