--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
     "actions-on-google": "^2.6.0",
     "annyang": "^2.6.1",
     "axios": "^0.18.0",
-    "codesandbox": "^2.1.4",
+    "codesandbox": "^2.1.5",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.16.4",
+    "express-http-to-https": "^1.1.4",
     "express-session": "^1.15.1",
     "firebase-admin": "^7.3.0",
     "firebase-functions": "^2.3.0",
