--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "actions-on-google": "^2.6.0",
     "annyang": "^2.6.1",
     "axios": "^0.18.0",
+    "chart.js": "^2.8.0",
     "codesandbox": "^2.1.5",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
@@ -66,6 +67,7 @@
     "react-draggable": "^3.3.0",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
+    "recharts": "^1.5.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
